Fixed modal overflow.

--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -6,10 +6,12 @@
   background-color: $white;
 
   z-index: 2000;
+  overflow: auto;
 }
 
 .Large {
   width: 1200px;
+  height: 95vh;
 }
 
 .Small {
